--- a/.github/workflows/incloud.yaml
+++ b/.github/workflows/incloud.yaml
@@ -69,7 +69,7 @@ jobs:
           #naabu -l passive_subdomains.txt -p 1-65535 -c 2000 | httpx -title -t 230 | tee naabu.txt
           #naabu -l passive_subdomains.txt -p 1-65535 -c 2000 | tee naabu.txt
           naabu -l passive_subdomains.txt -tp 1000 -c 3000 | tee naabu.txt
-          cat naabu.txt | gau --subs --blacklist png,jpg,gif,css --o example-urls.txt
+          cat naabu.txt | gau --subs --blacklist png,jpg,gif,css --o ga_urls.txt
           #cat naabu.txt | waybackurls | tee way_urls.txt
           cat naabu.txt | waybackurls > way_urls.txt
           
