--- a/.github/workflows/incloud.yaml
+++ b/.github/workflows/incloud.yaml
@@ -31,7 +31,7 @@ jobs:
           go install -v github.com/projectdiscovery/httpx/cmd/httpx@latest
           go install -v github.com/lc/gau/v2/cmd/gau@latest
           #go install -v github.com/tomnomnom/waybackurls@latest
-          #go install -v github.com/projectdiscovery/nuclei/v2/cmd/nuclei@latest
+          go install -v github.com/projectdiscovery/nuclei/v2/cmd/nuclei@latest
           #go install -v github.com/projectdiscovery/mapcidr/cmd/mapcidr@latest
           
         shell: bash
