--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -46,9 +46,9 @@ jobs:
       - name: Running DNS enumeration...
         run: |
           rm -rf *_*.txt
-          subfinder -dL domains.txt -config config/subfinder-config.yaml -o active_subdomains.txt
-          dnsx -l passive_subdomains.txt -t 350 | tee -a active_subdomains.txt
-          sort -u active_subdomains.txt     
+          subfinder -dL domains.txt -config config/subfinder-config.yaml | dnsx -t 350 -o active_subdomains.txt
+          # dnsx -l active_subdomains.txt -t 350 | tee -a active_subdomains.txt
+          # sort -u active_subdomains.txt     
         shell: bash
 
 
