--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -67,8 +67,9 @@ jobs:
           #naabu -l passive_subdomains.txt -p 1-65535 -c 20000 | tee naabu.txt
           #naabu -l passive_subdomains.txt -tp 1000 -c 3000 | tee naabu.txt
           ##cat naabu.txt | waybackurls | tee way_urls.txt
+          # naabu -l active_subdomains.txt -p 1-65535 -c 20000 | httpx -title -t 230 | tee naa_port.txt
 
-          naabu -l active_subdomains.txt -p 1-65535 -c 2000 | httpx -title -t 230 | tee naa_port.txt
+          naabu -l active_subdomains.txt -p 1-65535 -c 20000 -o naa_port.txt
           
           cat naa_port.txt | gau --subs --blacklist png,jpg,gif,css --o ga_urls.txt
           cat naa_port.txt | waybackurls > way_urls.txt
